# electricity-sun

./: .gitignore  README.md  backend-deploy.sh  simple_calculator.py
backend-api/: Dockerfile  README.md  build.sh  pyproject.toml  run.sh
backend-api/app/: calculator.py  main.py
frontend-site/: Dockerfile  README.md  middleware.ts  package.json  pnpm-lock.yaml
frontend-site/app/: globals.css  layout.tsx  page.tsx
frontend-site/app/api/auth/login/: route.ts
frontend-site/app/api/auth/logout/: route.ts
frontend-site/app/api/auth/register/: route.ts
frontend-site/app/api/auth/session/: route.ts
frontend-site/app/api/logs/: route.ts
frontend-site/app/calculate/: page.tsx
frontend-site/app/sign-in/: page.tsx
frontend-site/components/: floating-bills.tsx  google-login-button.tsx  image-with-loading.tsx  session-provider.tsx
frontend-site/components/animations/: count-up.tsx  fade-in.tsx  scroll-reveal.tsx  stagger-children.tsx
frontend-site/components/ui/: device-preview.tsx  responsive-container.tsx  responsive-grid.tsx  slider.tsx  social-links.tsx
frontend-site/contexts/: auth-context.tsx
frontend-site/hooks/: use-auth.ts  useAuth.ts
frontend-site/lib/: auth-utils.ts  auth.ts  logger.ts  server-auth.ts  utils.ts
tests/: test_calculator.py
